fix layout on small screens

--- a/src/components/app-footer/app-footer.module.css
+++ b/src/components/app-footer/app-footer.module.css
@@ -14,7 +14,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 352px) {
   .footer {
     flex-direction: column;
   }
