--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -7,7 +7,7 @@
   justify-content: space-between;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 352px) {
   .header {
     flex-direction: column;
   }
